Loading model as stream resource